feat/openapi: add refresh path (#11)
* feat/auth: add token refresh endpoint

* minor changes

* minor changes
